fix: layout issue on tablet devices

--- a/themes/roots/sass/_markdown.scss
+++ b/themes/roots/sass/_markdown.scss
@@ -56,6 +56,7 @@ a {
   width: 430px;
   border-radius: 15px;
   max-height: 100%;
+  max-width: 100%;
 }
 
 .content img {
