--- a/themes/roots/sass/theme.scss
+++ b/themes/roots/sass/theme.scss
@@ -131,7 +131,7 @@ main {
   height: 90%;
 
   h3 {
-    margin-bottom: 2em;
+    margin-bottom: 1em;
   }
 
   p {
@@ -159,7 +159,7 @@ main {
 
 .grid {
   display: flex;
-  gap: 5em;
+  gap: 3em;
   justify-content: space-between;
 }
 
@@ -234,6 +234,29 @@ footer {
   display: flex;
   flex-direction: row;
   gap: 1em;
+}
+
+@media screen and (max-width: 900px) {
+  nav {
+    margin-bottom: .5em;
+  }
+
+  .content img {
+    width: 12vw;
+  }
+
+  .frontpage-explore-more, .toc {
+    display: none;
+  }
+
+  .frontpage {
+    //height: 100%;
+  }
+
+  .frontpage-frame {
+    height: 90%;
+    width: 85%;
+  }
 }
 
 @media screen and (max-width: 768px) {
